2011-06-16  Christopher Roy Bratusek <nano@tuxfamily.org>
	* lisp/sawfish/wm/integration/xfce.jl: added hibernate and suspend
	entries to xfce-integration module

2011-06-15  Christopher Roy Bratusek <nano@tuxfamily.org>
	* lisp/sawfish/wm/frames.jl: ensure that title-offsets really are
	correct when switching styles from SawfishConfig

2011-06-14  Christopher Roy Bratusek <nano@tuxfamily.org>
	* lisp/sawfih/wm/ext/match-window.jl
	* themes/StyleTab/theme.jl
	* lisp/sawfish/wm/animation/main.jl
	* lisp/sawfish/wm/viewport.jl: use 'range widget where appropriate

	* lisp/sawfish/wm/frames.jl: add an option to control the titlebar
	text position, both in vertical and horizontal direction. Added an
	ugly hack to ensure tab-adjustments are correct when switching between
	tabbed themes from SawfishConfig.

	* lisp/sawfish/wm/user.jl: load customized text-position on startup

	* themes/StyleTab/theme.jl: set title-x offsets so that
	update-text-position works properly with StyleTab

	* themes/gradient-tabbed/: added

	* themes/Makefile.in: updated

	* lisp/sawfish/wm/cfg/widgets/frame-style.jl: simplified 'frame-style
	widget a bit

2011-06-13  Christopher Roy Bratusek <nano@tuxfamily.org>
	* lisp/sawfish/gtk/widgets/image.jl: improved loading of preview-image
	-- Lucas Pandolfo

	* lisp/sawfish/cfg/layout/keymaps.jl: ported selector for choosing
	keymap in SawfishConig to GtkComboBoxText

	* lisp/sawfish/gtk/widget.jl: added range widget. number-widget using
	GtkScale instead of GtkSpinButton

	* lisp/sawfish/wm/edge/conf.jl: use 'range widget

	* themes/get-S-tabbed/
	* themes/brushed-metal/
	* themes/simple/
	* themes/smaker/
	* themes/mono/
	* themes/gtk/
	* themes/gradient/: removed

	* themes/candido/
	* themes/Zami-like/: added

	* themes/Makefile.in: updated

2011-06-11  Christopher Roy Bratusek <nano@tuxfamily.org>
	* lisp/sawfish/cfg/widgets/workspace-geometry.jl: removed, unused

	* lisp/sawfish/wm/misc.jl: add call-with-pointer-grabbed
