@@ -48,6 +48,9 @@
 
   (define ok-widget)
   (define revert-widget)
+  (define wiki-button)
+  (define doc-button)
+  (define about-button)
 
   (define (apply-gtk-style-properties)
     ;; GtkComboBoxText Widget
@@ -101,6 +104,9 @@
 
 	(setq ok-widget (gtk-button-new-from-stock "gtk-close"))
 	(setq revert-widget (gtk-button-new-from-stock "gtk-undo"))
+	(setq wiki-button (gtk-link-button-new-with-label "http://sawfish.wikia.com/" "Sawfish Wiki"))
+	(setq about-button (gtk-button-new-from-stock "gtk-about"))
+	(setq doc-button (gtk-button-new-from-stock "gtk-help"))
 	(gtk-window-set-title main-window (_ "Sawfish Configurator"))
 	(gtk-widget-set-name main-window (_ "Sawfish Configurator"))
 	(gtk-window-set-wmclass main-window "sawfish-configurator"
@@ -113,6 +119,13 @@
 	(gtk-box-pack-end vbox hbox)
 	(g-signal-connect ok-widget "clicked" on-ok)
 	(g-signal-connect revert-widget "clicked" on-revert)
+	(g-signal-connect about-button "clicked"
+	  (lambda () (system "sawfish-about >/dev/null 2>&1 </dev/null &")))
+	(g-signal-connect doc-button "clicked"
+	  (lambda () (system "x-terminal-emulator -e \"info sawfish Top\" &")))
+	(gtk-container-add hbox wiki-button)
+	(gtk-container-add hbox doc-button)
+	(gtk-container-add hbox about-button)
 	(gtk-container-add hbox revert-widget)
 	(gtk-container-add hbox ok-widget)
 
