@@ -1,3 +1,11 @@
+2011-06-18  Christopher Roy Bratusek <nano@tuxfamily.org>
+	* scripts/Makefile.in: install sawfish-about in $BINDIR
+
+	* lisp/sawfish/wm/commands/help.jl: updated
+
+	* lisp/sawfish/cfg/shell.jl: add buttons for accessing Wiki, Info and
+	About to SawfishConfig
+
 2011-06-16  Christopher Roy Bratusek <nano@tuxfamily.org>
 	* lisp/sawfish/wm/integration/xfce.jl: added hibernate and suspend
 	entries to xfce-integration module
